--- a/scss/common.scss
+++ b/scss/common.scss
@@ -13,6 +13,7 @@
 //   - Aside
 // - Dropdown
 // - Header
+// - List control
 // - Menu panel
 // - Notification
 // - Post
@@ -28,6 +29,7 @@
 @import 'common/cooked-aside';
 @import 'common/dropdown';
 @import 'common/header';
+@import 'common/list-control';
 @import 'common/menu-panel';
 @import 'common/notification';
 @import 'common/post';
