--- a/scss/common/_topic-list-category.scss
+++ b/scss/common/_topic-list-category.scss
@@ -34,6 +34,69 @@
   }
 }
 
+.category-boxes,
+.category-boxes-with-topics {
+  margin: 0 ($card-margin-x / -2) ($spacer-lg - $card-margin-y);
+  width: auto;
+
+  h3 {
+    @include typography-h4;
+
+    margin-bottom: 0;
+    text-align: left;
+  }
+
+  .category-box {
+    border-left-width: 2px;
+    border-radius: $card-border-radius 0 0 $card-border-radius;
+    margin: 0 ($card-margin-x / 2) $card-margin-y;
+    width: calc(33.333333% - #{$card-margin-x});
+  }
+
+  .category-box-inner {
+    @include card;
+  }
+}
+
+.category-boxes-with-topics {
+  .category-box-heading {
+    @include card-block;
+  }
+
+  .featured-topics {
+    @include card-block;
+
+    padding-top: 0;
+    padding-bottom: 0;
+
+    li {
+      border-top: 1px solid color-chooser($white-divider, $black-divider);
+      margin-right: ($card-padding-x * -1);
+      margin-left: ($card-padding-x * -1);
+      padding: $card-padding-y $card-padding-x;
+
+      &::before {
+        display: none;
+      }
+
+      .overflow {
+        max-height: none;
+        white-space: nowrap;
+
+        > div {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+      }
+    }
+
+    ul {
+      color: color-chooser($white-secondary, $black-secondary);
+    }
+  }
+}
+
 .category-list {
   @include table;
 
