update reply box styles

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -248,6 +248,7 @@ $pre-padding:    $card-padding-y $card-padding-x !default;
 
 $dropdown-bg-dark:             $dark-4 !default;
 $dropdown-bg-light:            $light-4 !default;
+$dropdown-border-radius:       2px !default;
 $dropdown-box-shadow:          $shadow-8dp !default;
 $dropdown-font-size:           16px !default;
 $dropdown-font-size-sm:        13px !default;
