--- a/scss/common.scss
+++ b/scss/common.scss
@@ -17,8 +17,10 @@
 // - Menu panel
 // - Notification
 // - Post
+// - Reply
 // - Timeline
 // - Topic list
+//   - Category list
 //   - Suggested topics
 
 @import 'common/base';
@@ -33,6 +35,8 @@
 @import 'common/menu-panel';
 @import 'common/notification';
 @import 'common/post';
+@import 'common/reply';
 @import 'common/timeline';
 @import 'common/topic-list';
+@import 'common/topic-list-category';
 @import 'common/topic-list-suggested';
