--- a/scss/common/_menu-panel.scss
+++ b/scss/common/_menu-panel.scss
@@ -268,6 +268,10 @@ div {
       content: 'favorite_border';
     }
 
+    .fa-pencil::before {
+      content: 'edit';
+    }
+
     .fa-reply::before {
       content: 'reply';
     }
