--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -200,12 +200,11 @@
   }
 
   #draft-status {
-    background-color: color-chooser($chip-bg-dark, $chip-bg-light);
-    border-radius: 1em;
-    color: unquote('$primary');
+    background-color: transparent;
+    color: unquote('$tertiary');
     font-size: .857142857em;
-    margin-right: $card-inner-spacer-x;
-    padding: ($chip-padding-y / 2) ($chip-padding-x / 2);
+    margin-right: $spacer-sm;
+    margin-bottom: $spacer-sm;
     right: 50%;
     bottom: ($btn-height + $card-inner-spacer-y + $card-padding-y);
 
