make category button in reply box a flat button

--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -65,7 +65,7 @@
         text-align: right;
 
         a {
-          @include btn-raised;
+          @include btn-flat;
 
           height: $btn-height;
         }
