--- a/scss/common.scss
+++ b/scss/common.scss
@@ -18,6 +18,7 @@
 // - Notification
 // - Post
 // - Reply
+// - Select2
 // - Timeline
 // - Topic list
 //   - Category list
@@ -36,6 +37,7 @@
 @import 'common/notification';
 @import 'common/post';
 @import 'common/reply';
+@import 'common/select2';
 @import 'common/timeline';
 @import 'common/topic-list';
 @import 'common/topic-list-category';
